<resources>
    <string name="app_name">SignUp3</string>
    <string name="username">Username</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="ps">******</string>
    <string name="pf">******</string>
    <string name="register1">REGISTER</string>
    <string name="already_have_an_account">Already_Have_an_Account?</string>
    <string name="signup">SignUp</string>
    <string name="don_t_have_an_account">Don\'t have an Account?</string>
    <string name="don_t_have_an_account1">don_t_have_an_account?</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="logins">Login</string>
    <string name="don_t_have_an_account2">Don\'t have an account?</string>
</resources>